--- a/actress.html
+++ b/actress.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="home.html" target="_blank">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html" target="_blank">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#actress-bollywood">Bollywood</a>
